<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:title="@string/home"
        android:id="@+id/home_button"
        app:showAsAction="always"
        android:icon="@drawable/home_no_active_ico"
        />

    <item
        android:title="@string/search"
        android:id="@+id/search_button"
        app:showAsAction="always"
        android:icon="@drawable/search_no_active_ico"
        />

    <item
        android:title="@string/player"
        android:id="@+id/player_button"
        app:showAsAction="always"
        android:icon="@drawable/player_no_active_ico"
        />

    <item
        android:title="@string/more"
        android:id="@+id/more_button"
        app:showAsAction="always"
        android:icon="@drawable/more_no_active_ico"
        />


</menu>