<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.Profile">

    <com.project.nyacawa.presentation.ui.views.AccountField
        android:id="@+id/account_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
    </com.project.nyacawa.presentation.ui.views.AccountField>

    <View
        android:id="@+id/_line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/account_field"
        android:background="#61646F"
        >
    </View>

    <RelativeLayout
        android:id="@+id/bonuses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/_line"
        android:layout_marginTop="12dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"

        android:visibility="visible"

        >
        <ImageView
            android:id="@+id/_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/bonus_ico"
            android:contentDescription="TODO">
        </ImageView>

        <TextView
            android:id="@+id/bonus_count"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/_icon"
            android:text="@string/none"
            android:textColor="@color/account_profile"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/active_text"
            android:layout_toEndOf="@id/bonus_count"
            android:layout_marginStart="@dimen/low_margin"
            android:text="@string/bonuses"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
    </RelativeLayout>


    <View
        android:id="@+id/_line_2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#61646F"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/bonuses"
        >
    </View>

    <Button
        android:id="@+id/wish_list"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="@dimen/between_profile_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/_line_2"
        android:background="@color/trans"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/favorite_ico"
        android:text="@string/wish_list"
        style="@style/Text.T2.Profile"


        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        tools:ignore="RtlHardcoded">
    </Button>

    <Button
        android:id="@+id/bell_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="@dimen/between_profile_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wish_list"
        android:background="@color/trans"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/bell_more_ico"
        android:text="@string/notification"
        style="@style/Text.T2.Profile"


        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        tools:ignore="RtlHardcoded">
    </Button>


    <Button
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="@dimen/between_profile_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bell_button"
        android:background="@color/trans"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/message_ico"
        android:text="@string/chat"
        style="@style/Text.T2.Profile"


        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        tools:ignore="RtlHardcoded">
    </Button>

    <Button
        android:id="@+id/shop_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="@dimen/between_profile_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_button"
        android:background="@color/trans"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/cart_ico"
        android:text="@string/shop"
        style="@style/Text.T2.Profile"


        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        tools:ignore="RtlHardcoded">
    </Button>

    <Button
        android:id="@+id/donat_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="@dimen/between_profile_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_button"
        android:background="@color/trans"
        android:gravity="center_vertical|left"
        android:drawableLeft="@drawable/donate_ico"
        android:text="@string/donate"
        style="@style/Text.T2.Profile"


        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

        tools:ignore="RtlHardcoded">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>